# nibble

./: '  .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_linux.sh  build_win64.bat  ebnf.txt  nibble  out  out.s  run_tests.py  wishlist.txt
.github/workflows/: test_nibble_programs.yml
editor/: nibble.vim
examples/hello_world/: main.nib
examples/merge_sort/: main.nib  sort.nib
examples/snake_game/: main.nib  syscalls.nib  utils.nib
src/: all_srcs.h  allocator.c  allocator.h  argv_helper.h  array.c  array.h  ast.c  ast.h  basics.c  basics.h  bytecode.c  bytecode.h  code_gen.c  code_gen.h  compiler.c  compiler.h  const_eval.c  const_eval.h  cst.c  cst.h  cstring.c  cstring.h  gen_assembly.c  gen_assembly.h  hash_map.c  hash_map.h  ir.c  ir.h  lexer.c  lexer.h  lexer.h~  linker.c  linker.h  llist.h  main.c  nibble.c  nibble.h  os_utils.c  os_utils.h  parser.c  (+22 more)
src/ast/: module.c  module.h  print_ast.c
src/bytecode/: gen.c  module.c  module.h  print_ir.c  procs.c  vars.c
src/lexer/: module.c  module.h
src/parser/: common.c  decls.c  exprs.c  internal.h  module.c  module.h  stmts.c  typespecs.c
src/resolver/: common.c  decls.c  exprs.c  internal.h  module.c  module.h  stmts.c  typespecs.c
src/x64_gen/: convert_ir.c  data.c  data.h  elf.c  elf.h  elf_writer.c  gen.c  gen.h  ir.c  ir_to_xir.c  lir.c  lir.h  lir_to_x64.c  lir_to_x64.h  livevar.c  llir.c  llir.h  machine_code.c  machine_code.h  module.c  module.h  nasm_gen.c  nasm_gen.h  print_lir.c  print_lir.h  print_xir.c  print_xir.h  reg_alloc.c  reg_alloc.h  regs.c  regs.h  startup_linux.c  startup_linux_x64.asm  startup_windows.c  startup_windows_x64.asm  text.c  text.h  x64_instrs.c  x64_instrs.h  xir.c  (+3 more)
std/: cstring.nib  math.nib  module.nib  print.nib  print_floats.nib  test.nib
std/basic/: float_utils.nib  module.nib  print.nib  rand.nib  test.nib
std/linux/: module.nib
test/: main.nib  test.c
tests/: 2d_array.nib  2d_array.txt  add_assign.nib  add_sub_assign.nib  add_uints_diff_sizes.nib  add_uints_diff_sizes.txt  anon_obj.nib  anon_obj.txt  anon_struct_types.nib  anon_struct_types.txt  array_init.nib  array_init.txt  arrays.nib  arrays.txt  bitwise.txt  bool.nib  break.nib  break.txt  builtin.nib  builtin.txt  cat.nib  cat.txt  cmp.txt  comp_assign.nib  comp_assign.txt  continue.nib  continue.txt  copy_elision_rvo.nib  copy_elision_rvo.txt  cstring.nib  cstring.txt  cstring_export.nib  cstring_export.txt  custom_assert.c  div.nib  div.txt  enums.nib  enums.txt  export_test.nib  export_test.txt  (+94 more)
tests/elf_gen/: main.c  test_utils.c  test_utils.h
tests/libs/: build.sh
tests/nibble_programs/: 2d_array.nib  anon_obj.txt  arrays.txt  break.nib  builtin.txt  cat.txt  comp_assign.nib  copy_elision_rvo.nib  else_body_single_stmt_decl_err.nib  else_body_single_stmt_decl_err.txt  for_body_single_stmt_decl_err.nib  for_body_single_stmt_decl_err.txt  hello_std.txt  if_body_single_stmt_decl_err.nib  if_body_single_stmt_decl_err.txt  import_all_ns.nib  import_all_ns.txt  include_test.txt  included_utils.nib  included_utils.txt  io.nib  mov_ri.nib  nested_module.nib  primes_test.nib  proc_pointers.txt  shifts.txt  slices.txt  static_assert.txt  str_lit.txt  structs.txt  switch_constexpr.nib  switch_constexpr.txt  typedef.nib  variadic.nib  while_body_single_stmt_decl_err.nib  while_body_single_stmt_decl_err.txt
tests/nibble_programs/failing/: switch_stmt.nib
tests/test_programs/: 2d_array.txt  anon_obj.nib  anon_struct_types.nib  anon_struct_types.txt  array_init.txt  bitwise.nib  break.txt  builtin.nib  cat.txt  cmp.nib  continue.nib  continue.txt  copy_elision_rvo.txt  cstring.nib  cstring.txt  cstring_export.nib  divmod.nib  enums.nib  enums.txt  export_test.txt  floats.txt  foreign_libc.txt  foreign_obj.nib  foreign_static_lib.nib  hello_std.nib  hello_std.txt  import_all.txt  import_syms.txt  import_syms_ns.nib  import_syms_ns.txt  include_test.nib  io.txt  many_args.nib  many_args2.txt  mem_intrin.nib  mem_intrin.txt  mod.nib  mult.nib  mult.txt  neg_not.txt  (+19 more)
tool/: char_props_printer.c  find-replace.py  gen_grisu_cached_powers.py  printf_call.s  startup_linux_x64.asm
